# sistema-avaliacao-enade

./: README.md  pyproject.toml
sistema_avaliacao/: app.py  conexao_db.py  controllers.py  credenciais_db.py  dao.py  testes.py  testes_app.py  testes_controller.py
sql_criacao_banco/: criacao_banco_enade.sql
tests/: teste_conexao.py  testes_app.py
user_tests/: teste_conexao.py  testes_app.py
