[tool.poetry]
name = "sistema-avaliacao"
version = "0.1.0"
description = ""
authors = ["Otavio <ootavio112@gmail.com>", "Camilo <camiloreis.jf@gmail.com"]
readme = "README.md"
packages = [{include = "sistema_avaliacao"}]

[tool.poetry.dependencies]
python = ">=3.9"
mysql-connector-python = "8.0.33"
pymysql = "1.1.0"
Flask = "2.3.2"
Flask-Cors = "4.0.0"
Flask-Testing = "0.8.1"
Flask-RESTful = "0.3.10"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
